--- a/pyVerein/finance/templates/finance/transaction/detail.html
+++ b/pyVerein/finance/templates/finance/transaction/detail.html
@@ -51,7 +51,7 @@
                 {% trans 'Transactions' %}
             </div>
             <div class="row">
-                <table id="transactions" class="mdl-data-table mdl-js-data-table mdl-data-table--non-linkable" cellspacing="0" width="100%">
+                <table id="transactions" class="mdl-data-table mdl-js-data-table" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th class="mdl-data-table__cell--non-numeric">{% trans 'Account' %}</th>
@@ -115,7 +115,7 @@
                     {% trans 'Cleared transactions' %}
                 </div>
                 <div class="row">
-                    <table id="cleared-transactions" class="mdl-data-table mdl-js-data-table mdl-data-table--non-linkable" cellspacing="0" width="100%">
+                    <table id="cleared-transactions" class="mdl-data-table mdl-js-data-table" cellspacing="0" width="100%">
                         <thead>
                             <tr>
                                 <th class="mdl-data-table__cell--non-numeric">{% trans 'Account' %}</th>
