--- a/pyVerein/finance/templates/finance/transaction/list.html
+++ b/pyVerein/finance/templates/finance/transaction/list.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-    <table id="transactionlist" class="mdl-data-table mdl-js-data-table mdl-data-table--non-linkable"
+    <table id="transactionlist" class="mdl-data-table mdl-js-data-table"
             cellspacing="0"
             width="100%">
         <thead>
