--- a/pyVerein/reporting/templates/reporting/detail.html
+++ b/pyVerein/reporting/templates/reporting/detail.html
@@ -71,7 +71,7 @@
                 {% trans 'Resources' %}
             </div>
             <div class="row">
-                <table id="resources" class="mdl-data-table mdl-js-data-table mdl-data-table--non-linkable" cellspacing="0" width="100%">
+                <table id="resources" class="mdl-data-table mdl-js-data-table" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th class="mdl-data-table__cell--non-numeric">{% trans 'Filename' %}</th>
