--- a/pyVerein/finance/templates/finance/costobject/detail.html
+++ b/pyVerein/finance/templates/finance/costobject/detail.html
@@ -19,7 +19,7 @@
 
 
 {% block content %}
-    <table id="transactions" class="mdl-data-table mdl-js-data-table mdl-data-table--non-linkable" cellspacing="0" width="100%">
+    <table id="transactions" class="mdl-data-table mdl-js-data-table" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th class="mdl-data-table__cell--non-numeric">{% trans 'Document number' %}</th>
