--- a/pyVerein/finance/templates/finance/creditor/list.html
+++ b/pyVerein/finance/templates/finance/creditor/list.html
@@ -28,9 +28,11 @@
         </thead>
         <tbody>
             {% for creditor in creditors %}
-                <tr data-creditor="{% url 'finance:creditor_detail' pk=creditor.pk %}">
+                <tr>
                     <td class="mdl-data-table__cell--non-numeric">
-                        {{ creditor.number}}
+                        <a href="{% url 'finance:creditor_detail' pk=creditor.pk %}" target="_blank">
+                            {{ creditor.number}}
+                        </a>
                     </td>
                     <td class="mdl-data-table__cell--non-numeric">
                         {{ creditor.name }}
@@ -90,10 +92,6 @@
             $('#creditorlist_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
             });
-            $('tbody tr').click(function () {
-                window.open($(this).data('creditor'));
-            });
-        })
-        ;
+        });
     </script>
 {% endblock %}
