--- a/pyVerein/finance/templates/finance/debitor/clearing.html
+++ b/pyVerein/finance/templates/finance/debitor/clearing.html
@@ -20,7 +20,7 @@
 
 
 {% block content %}
-        <table id="transactions" class="mdl-data-table mdl-js-data-table mdl-data-table--non-linkable" cellspacing="0" width="100%">
+        <table id="transactions" class="mdl-data-table mdl-js-data-table" cellspacing="0" width="100%">
             <thead>
                 <tr>
                     <th></th>
