--- a/pyVerein/finance/templates/finance/impersonal/list.html
+++ b/pyVerein/finance/templates/finance/impersonal/list.html
@@ -28,9 +28,11 @@
         </thead>
         <tbody>
             {% for impersonal in impersonals %}
-                <tr data-impersonal="{% url 'finance:impersonal_detail' pk=impersonal.pk %}">
+                <tr>
                     <td class="mdl-data-table__cell--non-numeric">
-                        {{ impersonal.number}}
+                        <a href="{% url 'finance:impersonal_detail' pk=impersonal.pk %}" target="_blank">
+                            {{ impersonal.number}}
+                        </a>
                     </td>
                     <td class="mdl-data-table__cell--non-numeric">
                         {{ impersonal.name }}
@@ -90,10 +92,6 @@
             $('#impersonallist_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
             });
-            $('tbody tr').click(function () {
-                window.open($(this).data('impersonal'));
-            });
-        })
-        ;
+        });
     </script>
 {% endblock %}
