--- a/pyVerein/members/templates/members/division/list.html
+++ b/pyVerein/members/templates/members/division/list.html
@@ -28,9 +28,11 @@
         </thead>
         <tbody>
             {% for division in divisions %}
-                <tr data-division="{% url 'members:division_detail' pk=division.pk %}">
+                <tr>
                     <td class="mdl-data-table__cell--non-numeric">
-                        {{ division.name}}
+                        <a href="{% url 'members:division_detail' pk=division.pk %}" target="_blank">
+                            {{ division.name}}
+                        </a>
                     </td>
                     <td class="mdl-data-table__cell--non-numeric">
                         {{ division.members }}
@@ -90,9 +92,6 @@
             $('#divisionslist_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
             });
-        });
-        $('tbody tr').click(function () {
-            window.open($(this).data('division'));
         });
     </script>
 {% endblock %}
