--- a/pyVerein/members/templates/members/member/detail.html
+++ b/pyVerein/members/templates/members/member/detail.html
@@ -246,7 +246,7 @@
                     {% trans 'Files' %}
                 </div>
                 <div class="row">
-                    <table id="files" class="mdl-data-table mdl-js-data-table mdl-data-table--non-linkable" cellspacing="0" width="100%">
+                    <table id="files" class="mdl-data-table mdl-js-data-table" cellspacing="0" width="100%">
                         <thead>
                             <tr>
                                 <th class="mdl-data-table__cell--non-numeric">{% trans 'Filename' %}</th>
