--- a/pyVerein/members/templates/members/subscription/detail.html
+++ b/pyVerein/members/templates/members/subscription/detail.html
@@ -20,6 +20,7 @@
     <table id="members" class="mdl-data-table mdl-js-data-table" cellspacing="0" width="100%">
         <thead>
             <tr>
+                <th class="mdl-data-table__cell--non-numeric">{% trans 'Membership number' %}</th>
                 {% if perms.members.view_field_last_name %}
                     <th class="mdl-data-table__cell--non-numeric">{% trans 'Lastname' %}</th>
                 {% endif %}
@@ -39,7 +40,12 @@
         </thead>
         <tbody>
             {% for member in members %}
-                <tr data-member="{% url 'members:member_detail' pk=member.pk %}">
+                <tr>
+                    <td class="mdl-data-table__cell--non-numeric">
+                        <a href="{% url 'members:member_detail' pk=member.pk %}" target="_blank">
+                            {{ member.membership_number}}
+                        </a>
+                    </td>
                     {% if perms.members.view_field_last_name %}
                         <td class="mdl-data-table__cell--non-numeric">
                             {{ member.last_name}}
@@ -127,12 +133,6 @@
             $('#members_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
             });
-
-            $('tr').on('click', function(){
-                window.open($(this).data('member'));
-            })
         });
-
-
     </script>
 {% endblock %}
