--- a/pyVerein/reporting/templates/reporting/list.html
+++ b/pyVerein/reporting/templates/reporting/list.html
@@ -27,9 +27,11 @@
         </thead>
         <tbody>
             {% for report in reports %}
-                <tr data-report="{% url 'reporting:detail' pk=report.pk %}">
+                <tr>
                     <td class="mdl-data-table__cell--non-numeric">
-                        {{ report.name}}
+                        <a href="{% url 'reporting:detail' pk=report.pk %}">
+                            {{ report.name}}
+                        </a>
                     </td>
                     <td class="mdl-data-table__cell--non-numeric">
                         {{ report.description }}
@@ -98,10 +100,6 @@
             $('#reports_length select').on('change', function (e) {
                 dt.page.len(this.value).draw();
             });
-
-            $('tr').click(function(e){
-                window.open($(this).data('report'));
-            })
             $('a.run').click(function(e){
                 e.stopPropagation();
             })
