--- a/pyVerein/finance/templates/finance/transaction/edit.html
+++ b/pyVerein/finance/templates/finance/transaction/edit.html
@@ -93,7 +93,7 @@
             <table id="transactions" class="mdl-data-table dataTable" cellspacing="0" width="100%">
                 <thead>
                     <tr>
-                        <th></th>
+                        <th width="20px"></th>
                         <th class="mdl-data-table__cell--non-numeric">{% trans 'Account' %}</th>
                         <th class="mdl-data-table__cell--non-numeric">{% trans 'Transaction text' %}</th>
                         <th>{% trans 'Debit' %}</th>
