--- a/material.io/sass/colors.scss
+++ b/material.io/sass/colors.scss
@@ -5,3 +5,6 @@ $mdc-theme-on-secondary: #FAFAFA;
 $mdc-typography-font-family: Abel, sans-serif;
 $mdc-theme-background: #FFFFFF;
 $link: #D50000;
+$history_create: #149414;
+$history_change: #2979FF;
+$history_delete: #D50000;
