--- a/pyVerein/app/templates/app/_attributions.html
+++ b/pyVerein/app/templates/app/_attributions.html
@@ -77,6 +77,13 @@
                 </p>
                 <p>
                     <h4>
+                        Django-Simple-History
+                    </h4>
+                    <span class="mdc-typography--overline">Django-Simple-History</span> {% trans 'by' %} Trey Hunner<br />
+                    {% trans 'Published under' %} <a href="https://github.com/treyhunner/django-simple-history/blob/master/LICENSE.txt" title="BSD-License" target="_blank">BSD3-License</a> {% trans 'at' %} <a href="https://github.com/treyhunner/django-simple-history" title="{% trans 'Open at' %} github.com" target="_blank">github.com</a>
+                </p>
+                <p>
+                    <h4>
                         Django Two-Factor Authentication
                     </h4>
                     <span class="mdc-typography--overline">Django Two-Factor Authentication</span> {% trans 'by' %} Bouke<br />
@@ -123,6 +130,13 @@
                     </h4>
                     <span class="mdc-typography--overline">Material icons</span> {% trans 'by' %} Google<br />
                     {% trans 'Published under' %} <a href="http://www.apache.org/licenses/LICENSE-2.0.txt" title="Apache License Version 2.0" target="_blank">Apache License Version 2.0</a> {% trans 'at' %} <a href="https://material.io/tools/icons/" title="{% trans 'Open at' %} material.io" target="_blank">material.io</a>
+                </p>
+                <p>
+                    <h4>
+                        OverlayScrollbars
+                    </h4>
+                    <span class="mdc-typography--overline">OverlayScrollbars</span> {% trans 'by' %} Rene Haas<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://github.com/KingSora/OverlayScrollbars" title="{% trans 'Open at' %} github.com" target="_blank">github.com</a>
                 </p>
                 <p>
                     <h4>
