Fixed list sorting

--- a/pyVerein/finance/templates/finance/costcenter/detail.html
+++ b/pyVerein/finance/templates/finance/costcenter/detail.html
@@ -22,17 +22,19 @@
     <table id="transactions" class="mdl-data-table mdl-js-data-table" cellspacing="0" width="100%">
         <thead>
             <tr>
+                <th class="mdl-data-table__cell--non-numeric">{% trans 'Date' %}</th>
                 <th class="mdl-data-table__cell--non-numeric">{% trans 'Document number' %}</th>
                 <th class="mdl-data-table__cell--non-numeric">{% trans 'Transaction text' %}</th>
                 <th>{% trans 'Debit' %}</th>
                 <th>{% trans 'Credit' %}</th>
-                <th class="mdl-data-table__cell--non-numeric">{% trans 'Cost center' %}</th>
-                <th class="mdl-data-table__cell--non-numeric">{% trans 'Cost object' %}</th>
             </tr>
         </thead>
         <tbody>
             {% for transaction in transactions %}
                 <tr>
+                    <td class="mdl-data-table__cell--non-numeric" data-sort="{{ transaction.date|date:"Ymd"}}">
+                        {{ transaction.date }}
+                    </td>
                     <td class="mdl-data-table__cell--non-numeric">
                         <a href="{% url 'finance:transaction_detail' internal_number=transaction.internal_number %}" title="{% trans 'Show receipt' %}" target="_blank">
                             {{ transaction.document_number }}
@@ -47,20 +49,6 @@
                     <td>
                         {{ transaction.credit|default_if_none:"" }}
                     </td>
-                    <td class="mdl-data-table__cell--non-numeric">
-                        {% if transaction.cost_center%}
-                            <a href="{% url 'finance:costcenter_detail' pk=transaction.cost_center.pk %}" title="{% trans 'Show cost center' %}" target="_blank">
-                                {{ transaction.cost_center.number }} {{ transaction.cost_center.name }}
-                            </a>
-                        {% endif %}
-                    </td>
-                    <td class="mdl-data-table__cell--non-numeric">
-                        {% if transaction.cost_object%}
-                            <a href="{% url 'finance:costobject_detail' pk=transaction.cost_object.pk %}" title="{% trans 'Show cost object' %}" target="_blank">
-                                {{ transaction.cost_object.number }} {{ transaction.cost_object.name }}
-                            </a>
-                        {% endif %}
-                    </td>
                 </tr>
             {% endfor %}
         </tbody>
@@ -68,10 +56,9 @@
             <tr>
                 <th></th>
                 <th></th>
+                <th class="mdl-data-table__cell--non-numeric">{% trans 'Saldo' %} {{ saldo|floatformat:2 }}</th>
                 <th>{{ debit_sum|floatformat:2 }}</th>
                 <th>{{ credit_sum|floatformat:2 }}</th>
-                <th class="mdl-data-table__cell--non-numeric">{% trans 'Saldo' %} {{ saldo|floatformat:2 }}</th>
-                <th></th>
             </tr>
         </tfoot>
     </table>
