--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -108,8 +108,11 @@
             <footer id="page-footer">
                 <div class="history">
                     {% if instance %}
-                        {% blocktrans with created_at=instance.created_at created_by=instance.created_by.get_full_name modified_by=instance.last_modified_by.get_full_name modified_at=instance.modified_at %}Created at {{ created_at }} by {{ created_by }}.<br/>Last modified at {{ modified_at }} by {{ modified_by }}.{% endblocktrans %} &nbsp;|&nbsp;<a href="#" id="show-history" class="mdc-theme--on-primary" title="{% trans 'History' %}">{% trans 'History' %}</a>
-                        {% include "app/_history.html" with history=history %}
+                        {% blocktrans with created_at=instance.created_at created_by=instance.created_by.get_full_name modified_by=instance.last_modified_by.get_full_name modified_at=instance.modified_at %}Created at {{ created_at }} by {{ created_by }}.<br/>Last modified at {{ modified_at }} by {{ modified_by }}.{% endblocktrans %}
+                        {% if perms.utils.view_history %}
+                            &nbsp;|&nbsp;<a href="#" id="show-history" class="mdc-theme--on-primary" title="{% trans 'History' %}">{% trans 'History' %}</a>
+                            {% include "app/_history.html" with history=history %}
+                        {% endif %}
                     {% endif %}
                 </div>
                 <div class="attributions">
