--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -9,8 +9,7 @@ body {
   font-size: 16px; }
   body .inner {
     width: 100%;
-    height: auto;
-    display: none; }
+    height: auto; }
 
 body.pg-loaded .inner {
   display: inherit; }
